# rust-checkdigit

./: Cargo.toml  README.md
src/: algo.rs  lib.rs  prelude.rs  util.rs
src/algo/: ref_luhn.rs
src/util/: charmap.rs
tests/: ref_luhn.rs
tests/common/: mod.rs
